# sound_dsp_project

./: ARCHITECTURE.html  CHANGES.md  CMakeLists.txt  DESIGN_COMPILE_DTS.md  NOTICE.html  NOTICE.md  README.html  README.md  ^  architecture_review_14.md  convert_60x60.py  convert_icon.py  convert_icons.py  convert_img.py  eq.html  partitions.csv  skills-lock.json
components/app/: CMakeLists.txt
components/app/inc/: app_freertos.hpp  thingscloud_app.hpp
components/app/lvgl/: lvgl按键和文件架构.html
components/app/lvgl/UI/app/inc/: app_base.hpp  music_app.hpp  serial_app.hpp  settings_app.hpp
components/app/lvgl/UI/app/music/: impl.hpp  music.hpp  song_list.cpp  song_list.hpp
components/app/lvgl/UI/app/serial/: impl.cpp  impl.hpp  serial.hpp
components/app/lvgl/UI/app/settings/: impl.hpp  settings.hpp
components/app/lvgl/UI/app/src/: music_app.cpp  music_impl.cpp  serial_app.cpp  settings_app.cpp  settings_impl.cpp
components/app/lvgl/UI/nav/inc/: card_menu.hpp
components/app/lvgl/UI/nav/src/: card_menu.cpp
components/app/lvgl/UI/screen/inc/: gear_page.hpp  lock_screen.hpp  status_bar.hpp
components/app/lvgl/UI/screen/src/: lock_screen.cpp  (+1 more)
components/app/lvgl/core/inc/: lvgl_cmd.hpp  lvgl_main.hpp  theme.hpp  tool_config.hpp
components/app/lvgl/core/src/: lvgl_cmd.cpp  lvgl_main.cpp  theme.cpp  tool_config.cpp
components/app/lvgl/res/font/: lv_font_custom_16.c
components/app/lvgl/res/lottie/: gear_anim.c  gear_anim.h  lottie_gear_data.c  lottie_gear_data.h  setting.json
components/app/lvgl/res/picture/: gear_anim.h  gear_img.c  homelander.c  icon_music.c  icon_serial_debug.c  icon_settings.c  illustration_cogwheel.c  music_cover.c  music_note.c
components/app/src/: app_freertos.cpp  thingscloud_app.cpp
components/board/: CMakeLists.txt  board.dts  board.dts.json
components/board/include/: VFS.h  board_config.h  config_store.h  device.h  driver.h  task_config.h  task_utils.h  vfs_adc.h  vfs_gpio.h  vfs_pwm.h  vfs_rmt.h
components/board/src/: board_device.c  board_driver.c  board_driver_list.c  board_dts.c  board_force_link.c  config_store.c  task_config.c  task_utils.c
components/bsp/: CMakeLists.txt  README.md
components/bsp/blue/inc/: bsp_blue.h
components/bsp/blue/src/: bsp_blue.c
components/bsp/gpio/inc/: bsp_gpio.h  bsp_rgb_led.h
components/bsp/gpio/src/: bsp_gpio.c  bsp_rgb_led.c
components/bsp/i2s/inc/: bsp_i2s.h
components/bsp/i2s/src/: bsp_i2s.c
components/bsp/lcd/inc/: st7789.h
components/bsp/lcd/src/: st7789.c
components/bsp/mqtt/inc/: bsp_mqtt.h
components/bsp/mqtt/src/: bsp_mqtt.c
components/bsp/pwm/inc/: bsp_pwm.h
components/bsp/pwm/src/: bsp_pwm.c
components/bsp/rtc/inc/: BSP_RTC_CLOCK.h
components/bsp/rtc/src/: BSP_RTC_CLOCK.c
components/bsp/spi/inc/: bsp_spi.h
components/bsp/spi/src/: bsp_spi.c
components/bsp/tcp/inc/: bsp_tcp.h
components/bsp/tcp/src/: bsp_tcp.c
components/bsp/wifi/inc/: bsp_wifi.h
components/bsp/wifi/src/: bsp_wifi.c
components/device_hal/: CMakeLists.txt
components/device_hal/base/inc/: channel_device.hpp  display_device.hpp  light_device.hpp
components/device_hal/blue/inc/: blue.hpp
components/device_hal/blue/src/: blue.cpp
components/device_hal/button/inc/: button.hpp
components/device_hal/button/src/: button.cpp
components/device_hal/digital_amplifier/inc/: max98357A.hpp
components/device_hal/digital_amplifier/src/: max98357A.cpp
components/device_hal/gpio/inc/: gpio_controller.hpp  rgb_led.hpp
components/device_hal/gpio/src/: gpio_controller.cpp  rgb_led.cpp
components/device_hal/i2s/inc/: i2s_bus.hpp
components/device_hal/i2s/src/: i2s_bus.cpp
components/device_hal/lcd/: README.md
components/device_hal/lcd/inc/: st7789.hpp
components/device_hal/lcd/src/: st7789.cpp
components/device_hal/max98357A/inc/: max98357a.hpp
components/device_hal/max98357A/src/: max98357a.cpp
components/device_hal/network/inc/: wifi_manager.hpp
components/device_hal/network/src/: wifi_manager.cpp
components/device_hal/pwm/inc/: pwm_controller.hpp
components/device_hal/pwm/src/: pwm_controller.cpp
components/device_hal/serial/inc/: serial_console.hpp
components/device_hal/serial/src/: serial_console.cpp
components/device_hal/spi/inc/: spi_bus.hpp
components/device_hal/spi/src/: spi_bus.cpp
components/device_hal/time/inc/: m_time.hpp
components/device_hal/time/src/: m_time.cpp
components/drivers/: CMakeLists.txt
components/drivers/audio/: max98357a_driver.c
components/drivers/audio/inc/: max98357a_driver.h
components/drivers/display/: pwm_backlight.c  st7789_driver.c
components/drivers/display/inc/: st7789_driver.h
components/drivers/input/: gpio_key_driver.c
components/drivers/input/inc/: gpio_key_driver.h
components/drivers/led/: ws2812_driver.c
components/drivers/led/inc/: ws2812_driver.h
components/drivers/sensor/: light_sensor_driver.c
components/drivers/sensor/inc/: light_sensor_driver.h
components/hw_hal/: CMakeLists.txt
components/hw_hal/include/: hal_gpio.h  hal_i2c.h  hal_i2s_bus.h  hal_pwm.h  hal_rmt_led.h  hal_spi_bus.h  hal_uart.h
components/hw_hal/src/: hal_gpio.c  hal_i2c.c  hal_i2s_bus.c  hal_pwm.c  hal_rmt_led.c  hal_spi_bus.c  hal_uart.c
components/service/: CMakeLists.txt
components/service/audio/inc/: audio_service.hpp  mp3.hpp
components/service/audio/src/: audio_service.cpp  mp3.cpp
components/service/cloud/inc/: cloud_service.hpp  thingscloud_app.hpp
components/service/cloud/src/: cloud_service.cpp  thingscloud_app.cpp
components/service/factory/: README.md  factory.hpp
components/service/input/src/: key_input.cpp
components/service/network/inc/: tcp_client.hpp
components/service/network/src/: tcp_client.cpp
components/service/protocol/inc/: mqtt_client.hpp
components/service/protocol/src/: mqtt_client.cpp
components/service/ui/inc/: ui_service.hpp
components/service/ui/src/: ui_service.cpp
components/soc_port_esp32/: CMakeLists.txt
components/soc_port_esp32/src/: adc.c  gpio.c  hal_cpu.c  hal_force_stop.c  i2c.c  i2s_bus.c  pwm.c  rmt_led.c  spi.c  uart.c
(+95 files in other folders)
