idf_component_register(
    SRCS
        "gpio/src/bsp_gpio.c"
        "gpio/src/bsp_rgb_led.c"
        "spi/src/bsp_spi.c"
        "i2s/src/bsp_i2s.c"
        "pwm/src/bsp_pwm.c"
        "lcd/src/st7789.c"
        "wifi/src/bsp_wifi.c"
        "tcp/src/bsp_tcp.c"
        "mqtt/src/bsp_mqtt.c"
        "blue/src/bsp_blue.c"
        "rtc/src/BSP_RTC_CLOCK.c"
    INCLUDE_DIRS
        "gpio/inc"
        "spi/inc"
        "i2s/inc"
        "pwm/inc"
        "lcd/inc"
        "wifi/inc"
        "tcp/inc"
        "mqtt/inc"
        "blue/inc"
        "rtc/inc"
    REQUIRES driver freertos soc esp_wifi esp_event esp_netif nvs_flash lwip mqtt json bt config
)
