idf_component_register(
    SRCS
        "display/st7789_driver.c"
        "display/pwm_backlight.c"
        "audio/max98357a_driver.c"
        "input/gpio_key_driver.c"
        "led/ws2812_driver.c"
        "sensor/light_sensor_driver.c"
    INCLUDE_DIRS
        "display/inc"
        "audio/inc"
        "input/inc"
        "led/inc"
        "sensor/inc"
    REQUIRES
        board
        osal
        hal_if
)
