idf_component_register(
    SRCS
        "src/hal_gpio.c"
        "src/hal_spi_bus.c"
        "src/hal_i2s_bus.c"
        "src/hal_pwm.c"
        "src/hal_rmt_led.c"
        "src/hal_uart.c"
        "src/hal_i2c.c"
    INCLUDE_DIRS "include"
    PRIV_REQUIRES
        esp_driver_gpio
        esp_driver_spi
        esp_driver_i2s
        esp_driver_ledc
        esp_driver_rmt
        esp_driver_uart
        esp_driver_i2c
        freertos
        board
)
