idf_component_register(
    SRCS
        "src/spi.c"
        "src/i2c.c"
        "src/uart.c"
        "src/pwm.c"
        "src/gpio.c"
        "src/rmt_led.c"
        "src/i2s_bus.c"
        "src/adc.c"
    PRIV_REQUIRES
        board
        hal_if
        osal
        esp_driver_gpio
        esp_driver_spi
        esp_driver_i2s
        esp_driver_ledc
        esp_driver_rmt
        esp_driver_uart
        esp_driver_i2c
        freertos
        esp_adc
)
